2006-10-17  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/src/mimoconv.cpp: Fixed minor bug in tutorial

2006-10-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* ChangeLog, ChangeLog-2005, NEWS, NEWS-3.9, Makefile.am:
	ChangeLog and NEWS files split according to dates and versions.

==============================================================================

2006-10-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.6 released (SVN tag: release-3-10-6)

	* NEWS: Updated to reflect recent changes (merged rev. 679:681
	from itpp-3-10 branch).

	* itpp/Makefile.am: Fixed bug [1576333]. The problem with
	undefined non-weak symbols has been solved according to the
	solution from Section 7.3.5 "Libtool Convenience Libraries" of
	automake manual. Thanks to Ed Hill for reporting this bug and his
	work on RPM package for Fedora Core (merged rev. 676:677 from
	itpp-3-10 branch).

2006-10-14  Erik G. Larsson  <erik_g_larsson@sourceforge.net>

	* doc/tutorial/src/mimoconv.doc: Improvement to tutorial example

	* doc/local/installation.doc: Minor update

	* itpp/comm/modulator_nd.*, tests/modulator_nd_test.*: Fixed an
	error in ND_UQAM
	
2006-10-13  Erik G. Larsson  <erik_g_larsson@sourceforge.net>

	* doc/tutorial/src/mimoconv.doc: Update to reflect the change in
	LLR convention.

2006-10-12  Erik G. Larsson  <erik_g_larsson@sourceforge.net>

	* itpp/comm/llr.h, itpp/comm/modulator_nd.*: Changed the
	definition of LLRs from log(P(b=1)/P(b=0)) to log(P(b=0)/P(b=1))
	in the LLR and Modulator_ND classes. This was done to conform to
	the conventions in the scalar modulator class. (Note the interface
	change.)

	* doc/tutorial/tutorial.doc, doc/tutorial/mimoconv.doc,
	doc/tutorial/src/mimoconv.cpp: Added first version of new MIMO
	tutorial.

2006-10-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator.h: Additional check added to prevent
	improper initialisation of symbols and bit2symbols in the