@@ -1,3 +1,8 @@
+2006-10-18  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* configure.ac, itpp-config.in, itpp.pc.in: Cleaned up the
+	detected library flags necessary to link with static libraries.
+
 2006-10-17  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>
 
 	* doc/tutorial/src/mimoconv.cpp: Fixed minor bug in tutorial
